--- a/index.html
+++ b/index.html
@@ -26,13 +26,51 @@
         </style>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-        <script src="https://www.youtube.com/iframe_api"></script>
         <script src="elm.js"></script>
         <script src="app.js"></script>
     </head>
     <body>
         <script>
             var app = Elm.Main.fullscreen();
+            app.ports.play.subscribe(function() {
+                try {
+                    play();
+                    app.ports.played.send(time());
+                } catch (e) {
+                    console.log(e);
+                    app.ports.errored.send(e.toString());
+                }
+            });
+
+            app.ports.pause.subscribe(function() {
+                try {
+                    pause();
+                    app.ports.paused.send(time());
+                } catch (e) {
+                    console.log(e);
+                    app.ports.errored.send(e.toString());
+                }
+            });
+
+            app.ports.seek.subscribe(function(pos) {
+                try {
+                    seek(pos);
+                    app.ports.seeked.send(time());
+                } catch (e) {
+                    console.log(e);
+                    app.ports.errored.send(e.toString());
+                }
+            });
+
+            app.ports.total.subscribe(function() {
+                try {
+                    total();
+                    app.ports.seeked.send(time());
+                } catch (e) {
+                    console.log(e);
+                    app.ports.errored.send(e.toString());
+                }
+            });
         </script>
     </body>
 
