animate seekbar immediately after resize or on cursor change

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             .hero-body {
                 padding: 0px;
             }
+            .seekbar {
+                border: 1px solid grey;
+            }
         </style>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
