replace seekbar with html input range type

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Hello World!</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.1.0/css/bulma.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hint.css/2.3.1/hint.min.css">
 
         <style>
             .video-wrapper {
