new UI layout with raw search

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             .seekbar {
                 border: 1px solid grey;
             }
+            .video-list {
+                overflow-y: auto;
+                height: 90vh;
+            }
         </style>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
