add banner and ribbon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Hello World!</title>
+        <title>Youtube Sync & Watch together</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.1.0/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hint.css/2.3.1/hint.min.css">
@@ -24,15 +24,12 @@
             iframe {
                 pointer-events: none;
             }
-            .hero-body {
-                padding: 0px;
-            }
             .seekbar {
                 border: 1px solid grey;
             }
             .video-list {
                 overflow-y: auto;
-                height: 90vh;
+                max-height: 90vh;
             }
         </style>
 
